--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "prettier": "prettier --write \"{src,tests}/**/*.{js,ts,tsx,json,css,md}\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +18,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
     "vite": "^4.2.0"
+  },
+  "lint-staged": {
+    "{src,tests}/**/*.{js,ts,tsx,json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
